sidecar/envoy/envoy.tmpl.yaml
# https://www.envoyproxy.io/docs/envoy/latest/configuration/overview/examples#static
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 9001 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: main_service }
                http_filters:
                  # https://www.envoyproxy.io/docs/envoy/v1.27.1/configuration/http/http_filters/compressor_filter#using-different-compressors-for-requests-and-responses
                  - name: envoy.filters.http.compressor
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor
                      request_direction_config:
                        common_config:
                          enabled:
                            default_value: false
                            runtime_key: request_compressor_enabled
                      compressor_library:
                        name: for_response
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.compression.gzip.compressor.v3.Gzip
                          memory_level: 3
                          window_bits: 10
                          compression_level: BEST_COMPRESSION
                          compression_strategy: DEFAULT_STRATEGY
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: main_service
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: main_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ${PROXY_TARGET_ADDRESS}
                      port_value: 3000
